--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript-Tic-Tac-Toe-Project</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./public/css/style.css">
 </head>
 
@@ -29,8 +28,9 @@
     </table>
     <div class="endgame">
         <div class="text"></div>
-        <button class="replay" onClick="startGame()">Replay</button>
+        <button class="custom-btn btn-2" onClick="startGame()">Replay</button>
     </div>
+    <a class="replay" onClick="startGame()" data-title="Replay Tic Tac Toe"></a>
     <script src="./public/js/script.js"></script>
 </body>
 
